Worked on spacing issues

--- a/dev/css/partials/_classes.scss
+++ b/dev/css/partials/_classes.scss
@@ -40,8 +40,8 @@
 }
 
 .gameInteraction{
-	// margin-left: 5%;
-	margin-right: 5%;
+	//margin-left: 5%;
+	//margin-right: 5%;
 	border: 1px solid $color-sec;
 	border-radius: .15em;
 	padding: .2em .5em;
@@ -53,9 +53,9 @@
 }
 
 .conditions{
-	display: flex;
-	flex-flow: column wrap;
-	width: 150px;
+	//display: flex;
+	//flex-flow: column wrap;
+	//width: 180px;
 	display: inline-block;
 	margin-right: 0;
 	vertical-align: top;
